Fixes tooltips to be left aligned

--- a/cdap-ui/app/cdap/components/FastAction/SendEventAction/SendEventAction.scss
+++ b/cdap-ui/app/cdap/components/FastAction/SendEventAction/SendEventAction.scss
@@ -21,11 +21,6 @@
   }
 }
 
-.fast-action-tooltip {
-  background-color: #000000;
-  color: black;
-}
-
 .modal {
   .confirmation-modal {
     &.stream-send-events {
